# hg-rl-course

./: .env.template  .gitignore  .gitmodules  pyproject.toml
notebooks/: 1. LunarLander.ipynb  Unit_1.ipynb  huggy.config.yaml
results/Huggy/: configuration.yaml
results/Huggy/run_logs/: timers.json  training_status.json
src/rl_course/: common.py  log.py
